# whoop-telegram-bot-ai

./: .dockerignore  .env.example  .gitignore  ANALYTICS.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  GITHUB_PAGES_SETUP.md  LICENSE  PRIVACY_POLICY.md  README.md  README_EN.md  WHOOP_CHECK.md  WHOOP_TROUBLESHOOTING.md  config.yaml  docker-compose.yml  manual_whoop_connect.py  pyproject.toml  test_analytics.py  test_whoop_connection.py  whoop_callback.html
.github/: TOPICS.md
docs/: whoop_callback.html
my_whoop_data_2025_11_17/: journal_entries.csv  physiological_cycles.csv  sleeps.csv  workouts.csv
src/ras_bot/: bot.py  config.py  llm_client.py  main.py  scheduler.py  slots.py  stats.py  storage.py  whoop_client.py
src/whoop_telegram_bot_ai/: __init__.py  analytics.py  bot.py  config.py  llm_client.py  main.py  pattern_analyzer.py  predictions.py  recommendations.py  scheduler.py  slots.py  stats.py  storage.py  weekly_report.py  whoop_client.py  whoop_export_parser.py
tests/: __init__.py  test_slots.py  test_stats.py  test_storage.py
